Integrates markdown to the posts

--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -3,6 +3,8 @@ es:
     messages:
       blank: "no puede estar en blanco"
       invalid: "es inválido"
+      too_short: "es demasiado corto (mínimo: 250 caracteres)"
+
 
   activerecord:
     attributes:
